<resources>
    // primary
    <string name="app_name">Match My Major</string>
    <string name="title_home">Home</string>
    <string name="api_key">AIzaSyDpZSfgLeoCougmCtpdkuVZWDVHtZxKR0c</string>
    <string name="your_web_client_id">91863989930-r33tdk7l88vlepurejm6aamnsglk8ogt.apps.googleusercontent.com</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu">Menu</string>
    <string name="welcome">Welcome,</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_find">Come on, \n find a major that suits your \n interests and talents</string>

    // user
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_input">Login :</string>
    <string name="signup">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_hint">Email/Username</string>
    <string name="password_input">Password :</string>
    <string name="password_hint">Password (8–12 Character)</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="havent_account_yet">Didn\'t have an account yet?</string>
    <string name="have_account">Already have an account?</string>
    <string name="sub_text">Sub Text</string>

    <string name="name">Nama</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">LogOut</string>
    <string name="title_path">Path</string>
    <string name="title_career">Career</string>
    <string name="discussion">Discussion</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_test">Test</string>
    <string name="title_signup_page">Let\'s register you up!</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_button">Select</string>
    <string name="icon_description">Icon Desc</string>
    // about us
    <string name="aboutUsDesc">This project aims to bridge the gap between high school students\' interests and informed decision-making. Through advanced assessments and tailored recommendations, we envision equipping students with the tools and insights necessary to pursue fulfilling academic and career paths.</string>
    <string name="aboutUsSpecThx">This platform is the result of countless hours of hard work, creativity, and collaboration. We aim to bring value to your life, and we sincerely hope you enjoy exploring what we\'ve built.</string>
    <string name="aboutUsSpecThx2">A heartfelt thank you for your support and trust in our journey. Your encouragement inspires us to keep improving and striving for excellence.\nStay tuned for exciting updates and new features as we continue to grow and evolve!\nWith gratitude,</string>
    <string name="about_us">About Us</string>
    <string name="project_team">Project Team</string>
    <string name="project_lead">Berlian Aji Nur Khairi - Project Lead</string>
    <string name="dev_lead">Marcello Jayekto - Mobile Dev Lead</string>
    <string name="ml_lead">Muhammad Arief Rachman - ML Lead</string>
    <string name="resource_manager">Na’imatul Lu’lu’a - Resource Manager</string>
    <string name="github_and_repository_manager">Florencia Yang - Github And Repository Manager</string>
    <string name="cloud_comp_lead">M. Naufal Rafy G - Cloud Comp Lead</string>
    <string name="resource_manager_2">Geta Gabriela Merru - Resource Manager</string>
    // chatbot
    <string name="user_response">User response</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="gemini_ai">Gemini AI</string>
    <string name="ask_me">Ask me anything</string>
    <string name="clear_image">Clear Image</string>
    <string name="ask">Ask</string>
    //detailAct
    <string name="profile_picture">Profile Picture</string>
    <string name="skill_needed">Skill Needed:</string>
    <string name="list_abc">- ABC\n- BCD</string>
    <string name="universitas">University:</string>
    <string name="career_jobs">Career/Jobs:</string>
    <string name="article">Article:</string>
    <string name="tips">Tips:</string>

    // mainAct
    <string name="compare">Compare</string>
    <string name="chatbot">Chatbot</string>
    // homeFrag
    <string name="popular_majors">Popular Majors</string>
    <string name="civil_engineering">Civil Engineering</string>
    <string name="nursing">Nursing</string>
    <string name="computer_science">Computer Science</string>
    // Quiz
    <string name="value_input">Value Input</string>
    <string name="enter_value">Come on, enter your value</string>
    <string name="start_test">Start Test</string>
    <string name="questions">Questions arise here</string>
    <string name="a">Option A</string>
    <string name="b">Option B</string>
    <string name="c">Option C</string>
    <string name="d">Option D</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="end_test">End Test</string>
    <string name="want_start_test">Are you sure you want to start the test?</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>

    <string name="show_questions">Show Questions</string>

    <string name="input">Input</string>
    <string name="quiz_1">Quiz 1</string>
    <string name="take">Take</string>
    <string name="quiz_2">Quiz 2</string>
    <string name="quiz_3">Quiz 3</string>
    <string name="quiz_4">Quiz 4</string>
    <string name="interest">Interest</string>
    <string name="fill">Fill</string>
    // Type
    <string name="english">English</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="biology">Biology</string>
    <string name="math">Math</string>
    // new
    <string name="write_something">Write something...</string>
    <string name="write_something_2">Write something else...</string>
    <string name="please_answer">Please Answer the Questions Below</string>
    <string name="_1_problem_solving">1. Do you enjoy problem-solving?</string>
    // agree
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="previous">Previous</string>
    <string name="continuee">Continue</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="recommended">Recommended</string>
    <string name="prediction_result">Prediction result goes here</string>
    // rules
    <string name="quiz_rules">Quiz Rules</string>
    <string name="the_rules">1. Quiz have 5 question.\n2. Answer as quickly as possible.\n3. You can skip a question, but you\'ll lose points.\n4. No external help allowed.</string>
    <string name="take_the_test">Take the test to find a major that suits your interests and abilities</string>
    <string name="history">History</string>
    <string name="check_results">Check Results</string>
    <string name="date">2024-12-09</string>
    <string name="prediction_example">Prediction: Example</string>
    <string name="p">1</string>
    <string name="item_subtitle">Item subtitle</string>
    <string name="item_title">Item Title</string>
    <string name="my_profile">My Profile</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="theme">Theme</string>
    <string name="language">Language (En/Id)</string>
    <string name="version_app">V 1.0</string>
    <string name="note">Note</string>
    <string name="your_top_major_predict">Your Top Major Predict</string>
    <string name="compare_skills">Compare Skills</string>
    <string name="compare_career_prospects">Compare Career Prospects</string>
    <string name="select_major_2">Select Major 2</string>
    <string name="select_major_1">Select Major 1</string>
    <string name="clear" />

    <string name="privacy">We value your privacy. This privacy policy outlines how we collect, use, and protect your personal information when you use our app.\nWe may collect personal information such as your email address, device information, and usage data. This information is used to improve our app\'s performance, personalize your experience, and provide relevant services. We may share your data with third-party service providers like Google Cloud Platform to facilitate app functionality. Your data is protected by industry-standard security measures. You have the right to access, correct, or delete your personal data. We may update this privacy policy from time to time. Please contact us at our E-Mail with any privacy-related questions.</string>
    <string name="email_contact1">E-Mail Contact : matchmymajor@gmail.com</string>
    <string name="locationUs">Surabaya, East Java, Indonesia</string>
    <string name="user_example_com">user@example.com</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="congratulations">Congratulations!</string>
    <string name="skills_comparison">Skills Comparison</string>
    <string name="title_1">Title 1</string>
    <string name="content_1">Content 1</string>
    <string name="title_2">Title 2</string>
    <string name="content_2">Content 2</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="loading">Loading</string>
    <string name="dot">. . .</string>
</resources>