<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:itemBackground="@drawable/icon_background_selector"/> <!-- Apply the background selector here -->

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        android:itemBackground="@drawable/icon_background_selector"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        android:itemBackground="@drawable/icon_background_selector"/>

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/menu"
        android:itemBackground="@drawable/icon_background_selector"/>
</menu>
