<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_input"
        android:fontFamily="monospace"
        android:layout_gravity="left"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:hint="@string/email_hint"
        android:textColorHint="@color/teal_700"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_input"
        android:fontFamily="monospace"
        android:layout_gravity="left"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editPassLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/teal_700"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin" />

    <!-- Register Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btnRegister"
        android:layout_marginTop="16dp" />

</LinearLayout>
