<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:padding="16dp"
    tools:context=".view.question.QuizActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <ProgressBar
            android:id="@+id/progressBarQuizPref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="left">

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions"
                android:paddingHorizontal="8dp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:justificationMode="inter_word"
                android:gravity="left"/>

            <!-- Answer Options -->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioButtonA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:textColor="@color/black"
                    android:paddingHorizontal="8dp"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:buttonTint="#3B82F6" />

                <RadioButton
                    android:id="@+id/radioButtonB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:textColor="@color/black"
                    android:paddingHorizontal="8dp"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:buttonTint="#3B82F6" />

                <RadioButton
                    android:id="@+id/radioButtonC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textColor="@color/black"
                    android:paddingHorizontal="8dp"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:buttonTint="#3B82F6" />

                <RadioButton
                    android:id="@+id/radioButtonD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/d"
                    android:textColor="@color/black"
                    android:paddingHorizontal="8dp"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"
                    android:buttonTint="#3B82F6" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/next" />

        <Button
            android:id="@+id/btnEndTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/end_test" />
    </LinearLayout>
</RelativeLayout>
