<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_overlay"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/dialog_background"
        android:gravity="center">

        <ImageView
            android:id="@+id/rules_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/rules_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_rules"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/rules_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_rules"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:background="@drawable/button_style"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuee"
                android:background="@drawable/button_style"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
