<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/colorSurface">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/mmm_dashboard"
                    android:contentDescription="Profile Picture"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/circle_shape" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Username"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/colorOnPrimary"/>

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="user@example.com"
                        android:textSize="14sp"
                        android:textColor="@color/colorOnSecondary" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/colorSurface">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <View
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:background="@drawable/mmm_dashboard"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="16dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/list_item_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/your_top_major_predict"
                            android:textStyle="bold"
                            android:textColor="@color/colorOnPrimary"/>

                        <TextView
                            android:id="@+id/list_item_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subtitle"
                            android:textColor="@color/colorOnPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/colorSurface">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/my_profile"
                    android:textColor="@color/colorOnPrimary"/>

                <TextView
                    android:id="@+id/privacy_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/privacy_and_security"
                    android:textColor="@color/colorOnPrimary"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/theme_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/theme"
                    android:textColor="@color/colorOnPrimary"/>

                <TextView
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/language"
                    android:textColor="@color/colorOnPrimary"/>

                <TextView
                    android:id="@+id/about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/about_us"
                    android:textColor="@color/colorOnPrimary"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_app"
            android:textAlignment="center"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btn_signoutMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_out"
            android:backgroundTint="@color/red"/>

    </LinearLayout>
</ScrollView>
